# openvisp

./: .gitignore  README.md
admin/tags/1.0-RC1/: CREDITS
admin/tags/1.0-RC1/contrib/: README  Whitelist_ip_to_trusted_networks.php  Whitelist_ip_to_trusted_networks.sh  ftp_account_size.pl  lighttpd_mysql.pl  mailbox_size.README  mailreport.php  make_alias_file_for_spamrep.php  make_alias_for_spamrep.sh  policyd_spamtrap_alias_maps.cf  spamtrap_update.php
admin/tags/1.0-RC1/doc/: DATABASE.TXT  DATABASE_PGSQL.TXT  MYSQLDB-ADDRIGHTS.TXT  m0n0wall_radius.txt  sql_run.txt
admin/tags/1.0-RC1/htdocs/: config.inc.php  config.inc.php.sample  login.php  mailbox-password.php  setup.php  stats-domain.php  stylesheet.css  variables.inc.php
admin/trunk/: 00README  CHANGELOG.TXT  TODO
admin/trunk/contrib/: ftp_log_analyse.pl  graph_call.BL.txt  graph_call.php_functions.txt  graph_call.pl  mailaction.php  mailbox_size.pl  mailreporting.txt  openvisp_helo_domain_maps.cf  policyd_blacklist_client_maps.cf  spamreport.php  update_filter.pl
admin/trunk/doc/: BACKUP_MX.TXT  DATABASE.TXT  INSTALL.TXT  LICENSE.TXT  README  README.SOFTWARE  TABLE_CHANGES.TXT
admin/trunk/htdocs/: config.inc.php  config.inc.php.sample  gen-pdf.php  index.php  login.php  logout.php  password.php  sendmail.php  setup.php  stylesheet.css  variables.inc.php
admin/trunk/process/: create_aliases.dot  create_database.dot  create_domain.dot  create_mailboxes.dot
admin/trunk/scripts/: README  ircbot.pl
admin2/trunk/config/: database.yml
admin2/trunk/db/: schema.rb  seeds.rb
mod_vhs/tags/mod_vhs-apache-1.1.0/: ChangeLog  README  mod_vhs.h
mod_vhs/tags/mod_vhs-apache-1.1.0-RC0/: AUTHORS  ChangeLog  WARNING.THREADS  mod_vhs_alias.c
mod_vhs/trunk/: TODO
mod_vhs/trunk/mod_vhost_ldap-lighttpd/: README  mod_vhost_ldap.c
mod_vhs/trunk/mod_vhs-apache/: AUTHORS  ChangeLog  Makefile  README  README.LDAP  README.logs  README.mod_suphp  README.phpopt  README.wildcards  THANKS  TODO  WARNING.THREADS  compile.sh  compile_debug.shh  compile_php.sh  compile_php_debug.sh  config.m4  mod_vdbh.c  mod_vhs.c  mod_vhs.h  modules.mk
mod_vhs/trunk/mod_vhs-lighttpd/: mod_lvhost.c  mod_lvhost.conf  mod_lvhost.schema  patch-Makefile.am  patch-Makefile.in
mod_vhs/trunk/syslogger/: main.c
ngx_udplogger2/: ngx_http_udplog_module.c
ngx_udplogger2/trunk/: README  ngx_http_udplog_module.c
openldap-perl/trunk/: README
openldap-perl/trunk/conf/: db.conf  slapd.conf
openldap-perl/trunk/schema/: kazar.schema  pureftpd.schema
pax/trunk/: postfixadmin-2.0.5.tgz  postfixadmin_2.0.6_PSQL_BETA1.tgz
policyd/trunk/: README.TXT
policyd/trunk/src/: AUTHORS  COPYING  ChangeLog  ChangeLog.1  DATABASE.mysql  Makefile  Makefile.am  Makefile.in  NEWS  README  SELINUX  TODO  aclocal.m4  blacklist.c  cidr.c  cleanup.c  config.h.in  configure  configure.ac  generic.c  greylist.c  mysql.c  ovp.conf  policyd.c  policyd.conf  policyd.h  policyd.spec  policyd.spec.fedora  sockets.c  stats.c  syslog.c  throttle.c  throttle_from.c  throttle_host.c  throttle_rcpt.c  throttle_sasl.c  whitelist.c
policyd/trunk/src/contrib/: policyd-1.73.ebuild  policyd.cron  policyd.debian.init  policyd.freebsd.sh  policyd.gentoo.init  policyd.redhat.init  policyd.solaris.init  policyd.spec  policyd.spec.fedora  policyd.suse.init
policyd/trunk/src/database/: mysql.sql
policyd/trunk/src/doc/: blacklist_helo.sql  support.txt
policyd/trunk/src/m4/: mysql.m4  zlib.m4
policyd/trunk/src/src/: Makefile.am  Makefile.in  blacklist.c  blacklist_helo.c  cidr.c  cleanup.c  generic.c  greylist.c  helo.c  mysql.c  ovp.c  policyd.c  policyd.h  rcpt_acl.c  sockets.c  spamtrap.c  stats.c  syslog.c  throttle.c  throttle_from.c  throttle_host.c  throttle_rcpt.c  throttle_sasl.c  whitelist.c
stats/branches/ovs_1_03/: ovs.pl
stats/branches/ovs_1_04/: CHANGES  ovs-init  ovs.css  ovs.pl
stats/tags/ovs_1_01/: CHANGES  CHANGES.old  ovs.pl
stats/tags/ovs_1_02/: CHANGES  README
stats/trunk/: .project  CHANGES  TODO  mailgraph-init  mailgraph.cgi  mailgraph.pl  ovs-init  ovs.cgi  ovs.pl
t/: motd
(+1379 files in other folders)
