ACLOCAL_AMFLAGS=-I m4

SUBDIRS=src

EXTRA_DIST=database/mysql.sql

EXTRA_DIST+=contrib/policyd-1.73.ebuild contrib/policyd.cron 
EXTRA_DIST+=contrib/policyd.debian.init contrib/policyd.freebsd.sh
EXTRA_DIST+=contrib/policyd.gentoo.init contrib/policyd.redhat.init
EXTRA_DIST+=contrib/policyd.solaris.init contrib/policyd.suse.init
EXTRA_DIST+=contrib/policyd.spec
EXTRA_DIST+=contrib/policyd.spec.fedora

EXTRA_DIST+=doc/blacklist_helo.sql doc/support.txt doc/whitelist.sql

EXTRA_DIST+=ovp.conf

